Fix header/page nav styling
Removed the bandage solution on the styling and fixed it so that the elements never exceed the viewport and cause scrollbars

--- a/nasa-explore/src/components/gallery/Gallery.css
+++ b/nasa-explore/src/components/gallery/Gallery.css
@@ -1,5 +1,5 @@
 .Gallery-container{
-    width: calc(100vw - 10px - 2vmin);
+    width: 100%;
     position: relative;
     display: flex;
     font-size: calc(10px + 2vmin);
@@ -7,14 +7,6 @@
     justify-content: center;
     min-height: 100vh;
     align-items: center;
-}
-
-.Gallery-container header {
-  width: calc(100vw - 2.8vmin);
-}
-
-.Gallery-container pageNavigation {
-    width: calc(100vw - 2.8vmin);
 }
 
 .Card-container{
