--- a/nasa-explore/src/components/gallery/pageNavigation/PageNavigation.css
+++ b/nasa-explore/src/components/gallery/pageNavigation/PageNavigation.css
@@ -1,12 +1,11 @@
 .PageNavigation {
+    width: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
     background: #111311;
-    width: calc(100vw - 100px);
     display: flex;
-    justify-content: space-between;
-    padding: 2vmin;
-    padding-left: 40px;
-    padding-right: 40px;
+    justify-content: space-around;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
